--- a/index.html
+++ b/index.html
@@ -4,41 +4,48 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Calculator</title>
+		<link rel="stylesheet" href="./style.css" />
+		<title>wordy-master</title>
 	</head>
 	<body>
-		<div class="calc">
-			<div class="screen">0</div>
-			<section class="calc-buttons">
-				<div class="calc-buttons-row">
-					<button class="calc-button double">C</button>
-					<button class="calc-button">←</button>
-					<button class="calc-button">÷</button>
-				</div>
-				<div class="calc-buttons-row">
-					<button class="calc-button">7</button>
-					<button class="calc-button">8</button>
-					<button class="calc-button">9</button>
-					<button class="calc-button">x</button>
-				</div>
-				<div class="calc-buttons-row">
-					<button class="calc-button">4</button>
-					<button class="calc-button">5</button>
-					<button class="calc-button">6</button>
-					<button class="calc-button">-</button>
-				</div>
-				<div class="calc-buttons-row">
-					<button class="calc-button">1</button>
-					<button class="calc-button">2</button>
-					<button class="calc-button">3</button>
-					<button class="calc-button">+</button>
-				</div>
-				<div class="calc-buttons-row">
-					<button class="calc-button triple">0</button>
-					<button class="calc-button">=</button>
-				</div>
-			</section>
+		<header class="navbar">
+			<h1 class="brand">Word Masters</h1>
+		</header>
+		<div class="info-bar">
+			<div class="spiral">🌀</div>
+		</div>
+		<div class="scoreboard">
+			<div class="scoreboard-letter" id="letter-0"></div>
+			<div class="scoreboard-letter" id="letter-1"></div>
+			<div class="scoreboard-letter" id="letter-2"></div>
+			<div class="scoreboard-letter" id="letter-3"></div>
+			<div class="scoreboard-letter" id="letter-4"></div>
+			<div class="scoreboard-letter" id="letter-5"></div>
+			<div class="scoreboard-letter" id="letter-6"></div>
+			<div class="scoreboard-letter" id="letter-7"></div>
+			<div class="scoreboard-letter" id="letter-8"></div>
+			<div class="scoreboard-letter" id="letter-9"></div>
+			<div class="scoreboard-letter" id="letter-10"></div>
+			<div class="scoreboard-letter" id="letter-11"></div>
+			<div class="scoreboard-letter" id="letter-12"></div>
+			<div class="scoreboard-letter" id="letter-13"></div>
+			<div class="scoreboard-letter" id="letter-14"></div>
+			<div class="scoreboard-letter" id="letter-15"></div>
+			<div class="scoreboard-letter" id="letter-16"></div>
+			<div class="scoreboard-letter" id="letter-17"></div>
+			<div class="scoreboard-letter" id="letter-18"></div>
+			<div class="scoreboard-letter" id="letter-19"></div>
+			<div class="scoreboard-letter" id="letter-20"></div>
+			<div class="scoreboard-letter" id="letter-21"></div>
+			<div class="scoreboard-letter" id="letter-22"></div>
+			<div class="scoreboard-letter" id="letter-23"></div>
+			<div class="scoreboard-letter" id="letter-24"></div>
+			<div class="scoreboard-letter" id="letter-25"></div>
+			<div class="scoreboard-letter" id="letter-26"></div>
+			<div class="scoreboard-letter" id="letter-27"></div>
+			<div class="scoreboard-letter" id="letter-28"></div>
+			<div class="scoreboard-letter" id="letter-29"></div>
 		</div>
 	</body>
-	<script src="./calculator.js"></script>
+	<script src="./wordy-master.js"></script>
 </html>
